# compile_time_sha2

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT
.github/workflows/: checks.yaml
src/: consts.rs  error.rs  lib.rs
src/internals/: const_conversion.rs  consts.rs  convert_to_chunk.rs  digest_chunk.rs  extract_output.rs  message_schedule.rs  mod.rs  prepare_state_for_next_chunk.rs  traits.rs  types.rs
tests/: fuzz_against_sha2_crate.rs  precomputed.rs  test_against_precomputed.rs  test_against_sha2_crate.rs
