[package]
name = "compile_time_sha2"
version = "0.1.0"
edition = "2021"
authors = ["Kiril Mihaylov <80464733+KirilMihaylov@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
keywords = ["crypto", "cryptography", "hash", "sha2", "digest"]
categories = ["no-std", "no-std::no-alloc", "cryptography"]
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]

std = []

[dev-dependencies]
proptest = "1.4"
quickcheck = "1"
quickcheck_macros = "1"
sha2 = { version = "0.10.8", features = ["force-soft"] }
